--- a/package.json
+++ b/package.json
@@ -39,10 +39,14 @@
     "@ngrx/effects": "6.1.2",
     "@ngrx/router-store": "6.1.2",
     "@ngrx/store": "6.1.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@ngxs/devtools-plugin": "^3.4.3",
     "@ngxs/store": "^3.4.3",
     "@nrwl/nx": "7.3.0",
     "core-js": "^2.5.4",
+    "messageformat": "^2.1.0",
+    "ngx-translate-messageformat-compiler": "^4.4.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26"
   },
