--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,11 @@
     "lib": ["es2017", "dom"],
     "baseUrl": ".",
     "paths": {
+      "@test/i18n": ["libs/i18n/src/index.ts"],
       "@test/home": ["apps/home/src/module.ts"],
-    },
-
+      "@test/alpha": ["apps/alpha/src/module.ts"],
+      "@test/beta": ["apps/beta/src/module.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
