--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,21 @@
     },
     "home-e2e": {
       "tags": []
+    },
+    "alpha": {
+      "tags": []
+    },
+    "alpha-e2e": {
+      "tags": []
+    },
+    "beta": {
+      "tags": []
+    },
+    "beta-e2e": {
+      "tags": []
+    },
+    "i18n": {
+      "tags": []
     }
   }
 }
