--- a/apps/home/tsconfig.app.json
+++ b/apps/home/tsconfig.app.json
@@ -5,5 +5,10 @@
     "types": []
   },
   "exclude": ["test.ts", "**/*.spec.ts"],
-  "include": ["**/*.ts"]
+  "include": [
+    "**/*.ts",
+    // Lazy loaded modules...
+    "../../apps/alpha/src/module.ts",
+    "../../apps/beta/src/module.ts",
+  ]
 }
