--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "update:check": "ng update",
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
-    "help": "./node_modules/.bin/nx help"
+    "help": "./node_modules/.bin/nx help",
+    "commit-updates":"git add -A docs/dep-graph.svg && git diff --exit-code > /dev/null || git commit -m 'docs: Update the dependency graph for the readme'",
+    "update-dep-graph": "yarn run $([ $(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p') == 'develop' ] && echo 'dep-graph' || echo 'affected:dep-graph --base=origin/develop') --file=docs/dep-graph.svg && yarn commit-updates",
+    "pre-push": "git fetch && yarn run-s \"affected:lint --base=origin/develop --quiet --only-failed\" \"update-dep-graph\""
   },
   "private": true,
   "dependencies": {
