--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
     "help": "./node_modules/.bin/nx help",
-    "commit-updates":"git add -A docs/dep-graph.svg && git diff --exit-code > /dev/null || git commit -m 'docs: Update the dependency graph for the readme'",
+    "commit-updates": "git add -f docs/dep-graph.svg && git diff --exit-code > /dev/null || git commit -m 'docs: Update the dependency graph for the readme'",
     "update-dep-graph": "yarn run $([ $(git branch | sed -n -e 's/^\\* \\(.*\\)/\\1/p') == 'develop' ] && echo 'dep-graph' || echo 'affected:dep-graph --base=origin/develop') --file=docs/dep-graph.svg && yarn commit-updates",
     "pre-push": "git fetch && yarn run-s \"affected:lint --base=origin/develop --quiet --only-failed\" \"update-dep-graph\""
   },
@@ -48,6 +48,7 @@
     "@ngxs/store": "^3.4.3",
     "@nrwl/nx": "7.3.0",
     "core-js": "^2.5.4",
+    "husky": "^1.3.1",
     "messageformat": "^2.1.0",
     "ngx-translate-messageformat-compiler": "^4.4.0",
     "rxjs": "~6.3.3",
